# application-services

./: CHANGELOG.md  CHANGES_UNRELEASED.md  Cargo.toml
book/: adding-docs.html  android-faqs.html  build-and-publish-pipeline.html  building.html  contributing.html  dependency-management.html  logging.html  naming-conventions.html  print.html  searchindex.js  searchindex.json
book/adr/: 0000-use-markdown-architectural-decision-records.html  0001-update-logins-api.html  0002-database-corruption.html  0003-swift-packaging.html  0004-early-startup-experiments.html
book/design/: components-strategy.html  db-pragmas.html  megazords.html  metrics.html  rust-versions.html  swift-package-manager.html  sync-manager.html  sync-overview.html  test-faster.html
book/howtos/: adding-a-new-component.html  branch-builds.html  building-a-rust-component.html  converting-a-component-to-uniffi.html  cut-a-new-release.html  locally-building-jna.html  locally-published-components-in-fenix.html  locally-published-components-in-firefox-ios.html  locally-published-components-in-focus-ios.html  smoke-testing-app-services.html  testing-a-rust-component.html  upgrading-nss-guide.html  vendoring-into-mozilla-central.html
book/rust-docs/: search-index.js  settings.html  source-files.js
book/rust-docs/autofill/: fn.ffi_autofill_ff19_rustbuffer_alloc.html  macro.uniffi_reexport_scaffolding.html  (+3 more)
components/cirrus/: Cargo.toml  build.sh
components/cirrus/src/: behavior.rs  error.rs  lib.rs
components/nimbus/: Cargo.toml  uniffi.toml
megazords/cirrus/: Cargo.toml
tools/: requirements.txt
(+246 files in other folders)
