[package]
name = "cirrus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['console'] }
js-sys = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1"

[profile.release]
lto = true